[tool.poetry]
name = "github-api-v3-rest-pygithub"
version = "0.1.0"
description = ""
authors = ["a-fatah <abdulfatah66@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
PyGithub = "^2.3.0"
python-dotenv = "^1.0.1"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
